# resume-builder

./: .gitignore  README.md  RELEASE.md  RELEASE_SETUP.md  package-lock.json  package.json  postcss.config.js
.cursor/rules/: overarching-concept.mdc
.github/workflows/: ci.yml  release.yml  sign.yml
scripts/: release.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  resume.json  resume.tex  tauri.conf.json  template.fdb_latexmk  template.fls  template.tex
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: file.rs  latex.rs  mod.rs  resume.rs
src/components/: ActionsPanel.tsx  EducationForm.tsx  EducationItem.tsx  EducationSection.tsx  LivePreview.tsx  PersonalInfoForm.tsx  SkillsForm.tsx  VersionManager.tsx  index.ts
src/components/forms/: EducationForm.tsx  PersonalInfoForm.tsx  SkillsForm.tsx  WorkExperienceForm.tsx
src/types/: resume.ts
src/utils/: fileSaver.ts
temp/: temp.tex
