[package]
name = "resume-builder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resume_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "=0.11.0"
typst-pdf = "=0.11.0"
comemo = "0.4.0" # comemo 0.3.1 is compatible with typst 0.11.0
once_cell = "1.19.0"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }

[features]
# DO NOT REMOVE. This is used for development.
custom-protocol = ["tauri/custom-protocol"]

